--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     />
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <div class="card">
         <img src="images/image-qr-code.png" alt="" />
 
         <div class="text">
-          <h2>Improve your front-end skills by building projects</h2>
+          <h1>Improve your front-end skills by building projects</h1>
 
           <p>
             Scan the QR code to visit Frontend Mentor and take your coding
@@ -37,6 +37,6 @@
           </p>
         </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
